(fix) Gap cursor didn't show
The gap cursor in the editor was never shown because the CSS selector to show it didn't match.

--- a/packages/remirror__styles/all.css
+++ b/packages/remirror__styles/all.css
@@ -3467,6 +3467,7 @@ button:active .remirror-menu-pane-shortcut,
 }
 .remirror-editor .ProseMirror-focused.ProseMirror-gapcursor,
 .remirror-editor .ProseMirror-focused .ProseMirror-gapcursor,
+.remirror-editor.ProseMirror-focused .ProseMirror-gapcursor,
 .remirror-editor.ProseMirror-focused.ProseMirror-gapcursor {
   display: block;
 }
