--- a/packages/remirror__styles/extension-gap-cursor.css
+++ b/packages/remirror__styles/extension-gap-cursor.css
@@ -28,6 +28,7 @@
 }
 .remirror-editor .ProseMirror-focused.ProseMirror-gapcursor,
 .remirror-editor .ProseMirror-focused .ProseMirror-gapcursor,
+.remirror-editor.ProseMirror-focused .ProseMirror-gapcursor,
 .remirror-editor.ProseMirror-focused.ProseMirror-gapcursor {
   display: block;
 }
